# MultithreadedRayTracing

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: c-cpp.yml
include/: Ray.hpp  Raytracer.hpp  hittable.hpp  interval.hpp  sphere.hpp
include/Hittables/: hittable.hpp  hittable_list.hpp
include/Materials/: material.hpp
include/Render/: camera.hpp
include/Shapes/: sphere.hpp
include/Vector/: color.hpp  vec3.hpp
src/: Raytracer.cpp  interval.cpp  main.cpp
src/Vector/: color.cpp  ray.cpp  vec3.cpp
tests/: CMakeLists.txt  camera_test.cpp  color_test.cpp  hitRay_test.cpp  hittable_list_test.cpp  hittable_test.cpp  interval_test.cpp  materials_test.cpp  ray_test.cpp  raytracer_test.cpp  sphere_test.cpp  vec3_test.cpp
